<resources>
    <string name="app_name">MusicalStructureApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home">Home</string>
    <string name="happy_hits">Happy Hits!</string>
    <string name="feel_good_house">Feel Good House</string>
    <string name="rock_classics">Rock Classics</string>
    <string name="peaceful_guitar">Peaceful Guitar</string>
    <string name="music_for_studying">Music For Studying</string>
    <string name="jazz_vibes">Jazz Vibes</string>
    <string name="music_box">Music Box</string>
    <string name="store">Store</string>
    <string name="search">Search</string>
    <string name="playlists">Playlists</string>
    <string name="now_playing">Now Playing</string>

</resources>
